syntax = "proto3";

package lighthouse.v1;

service LighthouseDiscovery {
  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
}

message HeartbeatRequest {
  // Agent identifier (unique per agent)
  string agent_id = 1;

  // Agent's API endpoint (e.g. "http://10.0.0.5:8080" or "https://agent.example.com:50051")
  string endpoint = 2;

  // Unix timestamp when heartbeat was sent
  int64 timestamp = 3;

  // Agent uptime in seconds
  int64 uptime_seconds = 4;

  // Optional: capabilities (for future)
  repeated string capabilities = 5;
}

message HeartbeatResponse {
  // Lighthouse acknowledges receipt
  bool acknowledged = 1;

  // Optional: instructions from lighthouse (future use)
  string message = 2;
}